--- a/frogweb/froga/res/css/frog.css
+++ b/frogweb/froga/res/css/frog.css
@@ -18,7 +18,7 @@ body.frogbody {
     color: white;
     background-color: black;
     padding: 0 0 0 0;
-    margin: 0 0 0 0;
+    margin: 0 0 0 0;    
     border-style: none;
     border-spacing: 0pt;
     border-width: 0pt;
@@ -278,6 +278,23 @@ td.frogaTd {
     /* background-repeat: no-repeat; */
     background-size: 100% 100%;
 }
+
+
+td.upStreetTd {
+    width: 8%;
+    min-width: 36pt;
+    height: 6%;
+    min-height: 27pt;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    border-style: none;
+    border-spacing: 0pt;
+    border-width: 0pt;
+    border-color: transparent;
+    /* background-repeat: no-repeat; */
+    background-size: 100% 100%;
+}
+
 
 img.frogaImage,
 img.frogaWood {
