--- a/frogweb/froga/res/css/frog.css
+++ b/frogweb/froga/res/css/frog.css
@@ -179,6 +179,22 @@ span#rightNotes {
     font-size: large;
 }
 
+span.frogMove,
+span#fUp {
+    width: 100%;
+    min-width: 36pt;
+    height: 100%;
+    min-height: 27pt;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    border-style: none;
+    border-spacing: 0pt;
+    border-width: 0pt;
+    border-color: transparent;
+    background-repeat: no-repeat;
+    /* background-size: 100% 100%; */
+    font-size: 27pt;
+}
 
 div.froga.frogaFooter {
     width: 80%;
